增加了音乐模块~

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -848,7 +848,7 @@ pjax:
 
 # Inject the css and script (aplayer/meting)
 aplayerInject:
-  enable: false
+  enable: true
   per_page: true
 
 # Snackbar (Toast Notification 彈窗)
@@ -914,6 +914,7 @@ inject:
     - <link rel="stylesheet" href="/files_/css/mycss.css">
     # - <link rel="stylesheet" href="/xxx.css">
   bottom:
+    - <div class="aplayer no-destroy" data-id="60198" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true"> </div>
     # - <script src="xxxx"></script>
 
 # CDN
