--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -88,9 +88,9 @@ cover:
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
      - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
-     - /files_/pics/default_pics/1.jpg
-     - /files_/pics/default_pics/2.jpg
-     - /files_/pics/default_pics/3.jpg
+     - url(/files_/pics/default_pics/1.jpg)
+     - url(/files_/pics/default_pics/2.jpg)
+     - url(/files_/pics/default_pics/3.jpg)
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
