--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://cx330-502.github.io/Cx330-502-Blogs
+root: /Cx330-502-Blogs/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
