--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,6 +17,14 @@ jobs:
       with:
         submodules: true
 
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.7'
+
+    - name: Run convert.py
+      run: python convert.py
+
     - name: Setup Node.js
       uses: actions/setup-node@v1
       with:
