--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-theme-butterfly": "^4.9.0",
     "hexo-theme-landscape": "^1.0.0",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "hexo-blog-encrypt": "^3.1.8"
   }
 }
