--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://cx330-502.github.io/Cx330-502-Blogs
+url: https://cx330-502.top/Cx330-502-Blogs
 root: /Cx330-502-Blogs/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -121,6 +121,7 @@ aplayer:
 encrypt: # hexo-blog-encrypt
   abstract: 有东西被加密了, 请输入密码查看.
   message: 加密内容，叫爸爸就给你看
+  silent: true
   tags:
   - {name: 加密, password: Cx330-502}
   theme: Shrink
