--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -652,7 +652,8 @@ tag_ui: # 留空或 index
 # Website Background (設置網站背景)
 # can set it to color or image (可設置圖片 或者 顔色)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
-background: url(/Cx330-502-Blogs/files_/pics/bg-cover/3.jpg)
+#background: url(/Cx330-502-Blogs/files_/pics/bg-cover/3.jpg)
+background: url(/files_/pics/bg-cover/3.jpg)
 
 # Footer Background
 footer_bg: true
@@ -920,7 +921,8 @@ css_prefix: true
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
 inject:
   head:
-    - <link rel="stylesheet" href="/Cx330-502-Blogs/files_/css/mycss.css">
+    - <link rel="stylesheet" href="/files_/css/mycss.css">
+#    - <link rel="stylesheet" href="/Cx330-502-Blogs/files_/css/mycss.css">
     # - <link rel="stylesheet" href="/xxx.css">
   bottom:
 #    - <div class="aplayer no-destroy" data-id="60198" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true"> </div>
